force-app/main/default/objects/PricebookEntry/fields/Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Type__c</fullName>
    <label>Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Fixed Amount</fullName>
            </value>
            <value>
                <fullName>Per sq ft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>