force-app/main/default/objects/PricebookEntry/fields/CGST__c.field-meta.xml
<CustomField>
    <fullName>CGST__c</fullName>
    <label>CGST</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>