force-app/main/default/objects/PricebookEntry/fields/Development_Charges__c.field-meta.xml
<CustomField>
    <fullName>Development_Charges__c</fullName>
    <label>Development Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>