force-app/main/default/objects/PricebookEntry/fields/Development_Charges_Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>Development_Charges_Calculation_Type__c</fullName>
    <label>Development Charges Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>calculation_Type</valueSetName>
    </valueSet>
</CustomField>