force-app/main/default/objects/PricebookEntry/fields/Floor_Rise_Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>Floor_Rise_Calculation_Type__c</fullName>
    <label>Floor Rise Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>calculation_Type</valueSetName>
    </valueSet>
</CustomField>