force-app/main/default/objects/PricebookEntry/fields/Floor_Rise_Charges__c.field-meta.xml
<CustomField>
    <fullName>Floor_Rise_Charges__c</fullName>
    <label>Floor Rise Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>