force-app/main/default/objects/PricebookEntry/fields/Material_Code__c.field-meta.xml
<CustomField>
    <fullName>Material_Code__c</fullName>
    <externalId>true</externalId>
    <label>Material Code</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>