force-app/main/default/objects/PricebookEntry/fields/Material_Description__c.field-meta.xml
<CustomField>
    <fullName>Material_Description__c</fullName>
    <label>Material Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>