force-app/main/default/objects/PricebookEntry/fields/Preferred_Location_Charges__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Location_Charges__c</fullName>
    <label>Preferred Location Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>