force-app/main/default/objects/PricebookEntry/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <formula>IF(ISPICKVAL(Product2.Family, &apos;Saleable Unit&apos;),  Product2.Saleable_Area__c , IF(ISPICKVAL( Product2.Family, &apos;Parking&apos;), 1, IF( AND(ISPICKVAL(Calculation_Type__c, &apos;Per sq ft&apos;),ISPICKVAL( Product2.Family, &apos;Other Charges&apos;)),2,1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>