force-app/main/default/objects/PricebookEntry/fields/Scanning_Charges__c.field-meta.xml
<CustomField>
    <fullName>Scanning_Charges__c</fullName>
    <label>Scanning Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>