force-app/main/default/objects/PricebookEntry/fields/SGST__c.field-meta.xml
<CustomField>
    <fullName>SGST__c</fullName>
    <label>SGST</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>