force-app/main/default/objects/PricebookEntry/fields/Stamp_Duty_Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_Calculation_Type__c</fullName>
    <label>Stamp Duty Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>calculation_Type</valueSetName>
    </valueSet>
</CustomField>