force-app/main/default/objects/PricebookEntry/fields/Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Valid_To__c</fullName>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>